--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "@google-cloud/vision": "^1.11.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.12"
   }
 }
