--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.12"
+    "mongoose": "^5.9.12",
+    "puppeteer": "^3.0.4"
   }
 }
