Made a few of the routes, users, logo

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 GOOGLE_APPLICATION_CREDENTIALS=./personal-information-ab365-a93f4d7a7154.json
+SECRET_KEY==R7p[1eWs}$G?d(A'Kv,+pV&+FfX!`<CM7*&4{yWB&'WSR,!#9babX[x&7(jvpp
