--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_ml_vision: ^0.9.3
   image_picker: ^0.6.6+1
   http: ^0.12.1
+  shared_preferences: ^0.5.7+2
 
 dev_dependencies:
   flutter_test:
