--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -14,7 +14,6 @@ description: PIP
 version: 1.0.0+1
 
 dependencies:
-  flutter_facebook_login:
   flutter:
     sdk: flutter
 
@@ -25,6 +24,7 @@ dependencies:
   image_picker: ^0.6.6+1
   http: ^0.12.1
   shared_preferences: ^0.5.7+2
+  flutter_facebook_login: ^3.0.0
 
 dev_dependencies:
   flutter_test:
