login request done

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   http: ^0.12.1
   shared_preferences: ^0.5.7+2
   flutter_facebook_login: ^3.0.0
+  flutter_spinkit: ^4.1.2+1
 
 dev_dependencies:
   flutter_test:
