--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   shared_preferences: ^0.5.7+2
   flutter_facebook_login: ^3.0.0
   flutter_spinkit: ^4.1.2+1
+  camera: ^0.5.8+1
 
 dev_dependencies:
   flutter_test:
