--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   flutter_spinkit: ^4.1.2+1
   camera: ^0.5.8+1
+  url_launcher: ^5.4.2
 
 dev_dependencies:
   flutter_test:
